Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-79940

qtwebengine build failed on macOS 10.13 and 10.14

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.14
    • 5.14
    • WebEngine
    • None
    • macOS
    • ce72a40e91095dd5e1e46713fb94de493ee48d39

      https://codereview.qt-project.org/c/qt/qt5/+/280572 Update submodules on '5.14' in qt/qt5

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1573421570

      https://testresults.qt.io/coin/api/results/qt/qtwebengine/eb1572b0a229287c90f27c20d0697c1a9b3a962d/MacOSMacOS_10_13x86_64MacOSMacOS_10_13x86_64Clangqtci-macos-10.13-x86_64-2-e72489/a048bf8c62696818cba34d1254567170b477ee92/build_1573421857/log.txt.gz

      ...
      agent:2019/11/10 22:04:36 build.go:220: In file included from ../../3rdparty/chromium/services/shape_detection/barcode_detection_provider_mac.mm:14:
      agent:2019/11/10 22:04:36 build.go:220: In file included from ../../3rdparty/chromium/services/shape_detection/barcode_detection_impl_mac_vision.h:19:
      agent:2019/11/10 22:04:36 build.go:220: ../../3rdparty/chromium/services/shape_detection/detection_utils_mac.h:35:56: error: unexpected interface name 'NSError': expected expression
      agent:2019/11/10 22:04:36 build.go:220:       base::RepeatingCallback<void(VNRequest* request, NSError* error)>;
      agent:2019/11/10 22:04:36 build.go:220:                                                        ^
      agent:2019/11/10 22:04:36 build.go:220: ../../3rdparty/chromium/services/shape_detection/detection_utils_mac.h:35:65: error: use of undeclared identifier 'error'
      agent:2019/11/10 22:04:36 build.go:220:       base::RepeatingCallback<void(VNRequest* request, NSError* error)>;
      agent:2019/11/10 22:04:36 build.go:220:                                                                 ^
      agent:2019/11/10 22:04:36 build.go:220: ../../3rdparty/chromium/services/shape_detection/detection_utils_mac.h:35:36: error: use of undeclared identifier 'VNRequest'; did you mean 'noRequest'?
      agent:2019/11/10 22:04:36 build.go:220:       base::RepeatingCallback<void(VNRequest* request, NSError* error)>;
      agent:2019/11/10 22:04:36 build.go:220:                                    ^~~~~~~~~
      agent:2019/11/10 22:04:36 build.go:220:                                    noRequest
      agent:2019/11/10 22:04:36 build.go:220: ../../../../../../../../Applications/Xcode10.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/System/Library/Frameworks/CoreServices.framework/Frameworks/OSServices.framework/Headers/Power.h:82:3: note: 'noRequest' declared here
      agent:2019/11/10 22:04:36 build.go:220:   noRequest                     = 2,
      agent:2019/11/10 22:04:36 build.go:220:   ^
      agent:2019/11/10 22:04:36 build.go:220: In file included from ../../3rdparty/chromium/services/shape_detection/barcode_detection_provider_mac.mm:14:
      agent:2019/11/10 22:04:36 build.go:220: In file included from ../../3rdparty/chromium/services/shape_detection/barcode_detection_impl_mac_vision.h:19:
      agent:2019/11/10 22:04:36 build.go:220: ../../3rdparty/chromium/services/shape_detection/detection_utils_mac.h:35:47: error: use of undeclared identifier 'request'; did you mean 'noRequest'?
      agent:2019/11/10 22:04:36 build.go:220:       base::RepeatingCallback<void(VNRequest* request, NSError* error)>;
      agent:2019/11/10 22:04:36 build.go:220:                                               ^~~~~~~
      agent:2019/11/10 22:04:36 build.go:220:                                               noRequest
      agent:2019/11/10 22:04:36 build.go:220: ../../../../../../../../Applications/Xcode10.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/System/Library/Frameworks/CoreServices.framework/Frameworks/OSServices.framework/Headers/Power.h:82:3: note: 'noRequest' declared here
      agent:2019/11/10 22:04:36 build.go:220:   noRequest                     = 2,
      agent:2019/11/10 22:04:36 build.go:220:   ^
      agent:2019/11/10 22:04:36 build.go:220: In file included from ../../3rdparty/chromium/services/shape_detection/barcode_detection_provider_mac.mm:14:
      agent:2019/11/10 22:04:36 build.go:220: In file included from ../../3rdparty/chromium/services/shape_detection/barcode_detection_impl_mac_vision.h:19:
      agent:2019/11/10 22:04:36 build.go:220: ../../3rdparty/chromium/services/shape_detection/detection_utils_mac.h:43:7: error: unknown type name 'Callback'
      agent:2019/11/10 22:04:36 build.go:220:       Callback callback,
      agent:2019/11/10 22:04:36 build.go:220:       ^
      agent:2019/11/10 22:04:36 build.go:220: ../../3rdparty/chromium/services/shape_detection/detection_utils_mac.h:52:28: error: unknown type name 'Callback'
      agent:2019/11/10 22:04:36 build.go:220:   VisionAPIAsyncRequestMac(Callback callback,
      agent:2019/11/10 22:04:36 build.go:220:                            ^
      agent:2019/11/10 22:04:36 build.go:220: ../../3rdparty/chromium/services/shape_detection/detection_utils_mac.h:56:25: error: use of undeclared identifier 'VNRequest'; did you mean 'noRequest'?
      agent:2019/11/10 22:04:36 build.go:220:   base::scoped_nsobject<VNRequest> request_;
      agent:2019/11/10 22:04:36 build.go:220:                         ^~~~~~~~~
      agent:2019/11/10 22:04:36 build.go:220:                         noRequest
      agent:2019/11/10 22:04:36 build.go:220: ../../../../../../../../Applications/Xcode10.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/System/Library/Frameworks/CoreServices.framework/Frameworks/OSServices.framework/Headers/Power.h:82:3: note: 'noRequest' declared here
      agent:2019/11/10 22:04:36 build.go:220:   noRequest                     = 2,
      agent:2019/11/10 22:04:36 build.go:220:   ^
      agent:2019/11/10 22:04:36 build.go:220: In file included from ../../3rdparty/chromium/services/shape_detection/barcode_detection_provider_mac.mm:14:
      agent:2019/11/10 22:04:36 build.go:220: In file included from ../../3rdparty/chromium/services/shape_detection/barcode_detection_impl_mac_vision.h:19:
      agent:2019/11/10 22:04:36 build.go:220: ../../3rdparty/chromium/services/shape_detection/detection_utils_mac.h:56:25: error: template argument for template type parameter must be a type
      agent:2019/11/10 22:04:36 build.go:220:   base::scoped_nsobject<VNRequest> request_;
      agent:2019/11/10 22:04:36 build.go:220:                         ^~~~~~~~~
      agent:2019/11/10 22:04:36 build.go:220: ../../3rdparty/chromium/base/mac/scoped_nsobject.h:146:20: note: template parameter is declared here
      agent:2019/11/10 22:04:36 build.go:220: template <typename NST>
      agent:2019/11/10 22:04:36 build.go:220:                    ^
      agent:2019/11/10 22:04:36 build.go:220: In file included from ../../3rdparty/chromium/services/shape_detection/barcode_detection_provider_mac.mm:14:
      agent:2019/11/10 22:04:36 build.go:220: In file included from ../../3rdparty/chromium/services/shape_detection/barcode_detection_impl_mac_vision.h:19:
      agent:2019/11/10 22:04:36 build.go:220: ../../3rdparty/chromium/services/shape_detection/detection_utils_mac.h:57:9: error: unknown type name 'Callback'
      agent:2019/11/10 22:04:36 build.go:220:   const Callback callback_;
      agent:2019/11/10 22:04:36 build.go:220:         ^
      agent:2019/11/10 22:04:36 build.go:220: In file included from ../../3rdparty/chromium/services/shape_detection/barcode_detection_provider_mac.mm:14:
      agent:2019/11/10 22:04:36 build.go:220: ../../3rdparty/chromium/services/shape_detection/barcode_detection_impl_mac_vision.h:52:27: error: unknown type name 'VNRequest'
      agent:2019/11/10 22:04:36 build.go:220:   void OnBarcodesDetected(VNRequest* request, NSError* error);
      agent:2019/11/10 22:04:36 build.go:220:                           ^
      agent:2019/11/10 22:04:36 build.go:220: 10 errors generated.
      ...
      

        For Gerrit Dashboard: QTBUG-79940
        # Subject Branch Project Status CR V

            juri.valdmann Jüri Valdmann (Inactive)
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes