[macOS] Fix build error with new deployment target

The updated deployement target introduced in 2e63d12183 in qtbase
invalidated some forward declarations for the shape detection service
on macOS.

Quick-fix the build by importing the header for the Visions framework.

Task-number: QTBUG-79940
Change-Id: I83954546cbb5b143ba8777d58561b5eaa2648a2c
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>